@@ -3,7 +3,8 @@
 o Add cycle detection in find_pages_quick for malformed files
 o CCITT Group 3 and Group 4 encoders
 o New Pdf.remove_chain
-o Check object requires renumbering before doing so
+o Check object requires renumbering before doing so (speed)
+o Allow extraction of encryption when lack of password prevents reading
 
 2.8.1 (April 2025)
 
